
	* Fixed CTCP source reply URL. (#86)

	* Hide assertion in g_key_file_free in free_config when a network has no associated file (patch by exg)

	* Fix coredump with --init when the default config cannot be opened (patch by exg)

	* Fix crash when CHARSET command fails (#89)

	* Fall back to default charset if client charset can't be set 
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

  FEATURES

    * More advanced help support

	* Add LOG_LEVEL command (#101)

	* Add 'make uninstall' (#95)

	* Do some more config checking (#102)

	* Show disconnect reason in admin network (#100)

	* Add support for handling additional 005 parameters: MAXCHANNELS,
		NICKLEN, MAXBANS, MODES, NICKLEN, MAXBANS, TOPICLEN, KICKLEN, 
		AWAYLEN, MAXTARGETS, WALLCHOPS, WALLVOICES, RFC2812, PENALTY,
		FNC, SAFELIST, USERIP, CNOTICE, KNOCK, VCHANNELS, WHOX, CALLERID,
		ACCEPT, KEYLEN, USERLEN, HOSTLEN and SILENCE

  INTERNALS

    * Remove is_private from line struct (#12).
		(patch by Emanuele Giaquinta <e.giaquinta@glauco.it>)

	* Implement ISON, USERHOST for admin networks. (#99)

  PORTABILITY

    * Looks for check using pkg-config now.

  DOCUMENTATION

Ctrlproxy 3.0.1 2007-01-04

  BUG FIXES

    * Logging for network state information has been simplified and been 
	  made less verbose.

	* 324 and 329 replies are now cached.

	* 352 and 315 replies are now (optionally) cached. The "max_who_age" 
	  setting can be set to the number of seconds that results should be cached.
	  This prevents "Excess Flood" errors when connecting using several xchat clients
	  at once. Can be disabled by setting max_who_age=0 (the default).

    * Fixed bug in administration command (reported by Daniel Poelzleithner)

    * Fix invalid assert in auto-away (reported by Daniel Poelzleithner)

	* Fix rejoining parted channels on restart (#78)

	* Fix erroneus toggling of "report-time" setting (#77)
	
	* Fix endless loop in logging system when debug level is 
	  set to 5 (reported by _static_).
	