@@ -140,8 +140,13 @@ static char *get_nick(struct network *n, const struct line *l, gboolean case_sen
 
 static char *get_network(struct network *n, const struct line *l, gboolean case_sensitive) 
 { return g_strdup(n->name); }
+
 static char *get_server(struct network *n, const struct line *l, gboolean case_sensitive)
-{ return g_strdup(n->connection.data.tcp.current_server->host); }
+{
+	if (n->connection.data.tcp.current_server)
+		return g_strdup(n->connection.data.tcp.current_server->host);
+	return g_strdup("");
+}
 
 static char *get_percent(struct network *n, const struct line *l, gboolean case_sensitive) { return g_strdup("%"); }
 
